JailBreakLangParser.py
# Generated from JailBreakLang.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JailBreakLangParser ( Parser ):

    grammarFileName = "JailBreakLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'MAP'", "'='", "','", "'PLAYER'", "'EXIT'", 
                     "'WALL'", "'TRAP'", "'KEY'", "'GATE'", "'GUARD'", "'{'", 
                     "'}'", "'IF'", "'('", "')'", "'WHILE'", "'FOR'", "'IN'", 
                     "'FUN'", "'DIRECTION'", "'TURNLEFT'", "'TURNRIGHT'", 
                     "'STEP'", "'IFWALL'", "'IFDIRECTION'", "'IFGUARD'", 
                     "'IFTRAP'", "'IFGATE'", "'NO'", "'TRUE'", "'FALSE'", 
                     "'AND'", "'OR'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "COMMENT", "ID", "RAND", 
                      "INT", "WS" ]

    RULE_start = 0
    RULE_kod = 1
    RULE_obiekty = 2
    RULE_instrukcje_warunkowe = 3
    RULE_deklaracja_funkcji = 4
    RULE_wyrazenia = 5
    RULE_instrukcje_warunkowe_2 = 6
    RULE_kod_straznika = 7
    RULE_instrukcje_warunkowe_3 = 8
    RULE_sterowanie_straznikiem = 9
    RULE_warunek = 10

    ruleNames =  [ "start", "kod", "obiekty", "instrukcje_warunkowe", "deklaracja_funkcji", 
                   "wyrazenia", "instrukcje_warunkowe_2", "kod_straznika", 
                   "instrukcje_warunkowe_3", "sterowanie_straznikiem", "warunek" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    COMMENT=34
    ID=35
    RAND=36
    INT=37
    WS=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(JailBreakLangParser.INT)
            else:
                return self.getToken(JailBreakLangParser.INT, i)

        def kod(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JailBreakLangParser.KodContext)
            else:
                return self.getTypedRuleContext(JailBreakLangParser.KodContext,i)


        def getRuleIndex(self):
            return JailBreakLangParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = JailBreakLangParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.match(JailBreakLangParser.T__0)
            self.state = 23
            self.match(JailBreakLangParser.T__1)
            self.state = 24
            self.match(JailBreakLangParser.INT)
            self.state = 25
            self.match(JailBreakLangParser.T__2)
            self.state = 26
            self.match(JailBreakLangParser.INT)
            self.state = 27
            self.match(JailBreakLangParser.T__3)
            self.state = 28
            self.match(JailBreakLangParser.T__1)
            self.state = 29
            self.match(JailBreakLangParser.INT)
            self.state = 30
            self.match(JailBreakLangParser.T__2)
            self.state = 31
            self.match(JailBreakLangParser.INT)
            self.state = 32
            self.match(JailBreakLangParser.T__4)
            self.state = 33
            self.match(JailBreakLangParser.T__1)
            self.state = 34
            self.match(JailBreakLangParser.INT)
            self.state = 35
            self.match(JailBreakLangParser.T__2)
            self.state = 36
            self.match(JailBreakLangParser.INT)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34360469440) != 0):
                self.state = 37
                self.kod()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def obiekty(self):
            return self.getTypedRuleContext(JailBreakLangParser.ObiektyContext,0)


        def instrukcje_warunkowe(self):
            return self.getTypedRuleContext(JailBreakLangParser.Instrukcje_warunkoweContext,0)


        def deklaracja_funkcji(self):
            return self.getTypedRuleContext(JailBreakLangParser.Deklaracja_funkcjiContext,0)


        def getRuleIndex(self):
            return JailBreakLangParser.RULE_kod

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKod" ):
                listener.enterKod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKod" ):
                listener.exitKod(self)




    def kod(self):

        localctx = JailBreakLangParser.KodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_kod)
        try:
            self.state = 46
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6, 7, 8, 9, 10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.obiekty()
                pass
            elif token in [13, 16, 17, 35]:
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.instrukcje_warunkowe()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 3)
                self.state = 45
                self.deklaracja_funkcji()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObiektyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(JailBreakLangParser.INT)
            else:
                return self.getToken(JailBreakLangParser.INT, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(JailBreakLangParser.ID)
            else:
                return self.getToken(JailBreakLangParser.ID, i)

        def RAND(self, i:int=None):
            if i is None:
                return self.getTokens(JailBreakLangParser.RAND)
            else:
                return self.getToken(JailBreakLangParser.RAND, i)

        def kod(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JailBreakLangParser.KodContext)
            else:
                return self.getTypedRuleContext(JailBreakLangParser.KodContext,i)


        def kod_straznika(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JailBreakLangParser.Kod_straznikaContext)
            else:
                return self.getTypedRuleContext(JailBreakLangParser.Kod_straznikaContext,i)


        def getRuleIndex(self):
            return JailBreakLangParser.RULE_obiekty

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObiekty" ):
                listener.enterObiekty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObiekty" ):
                listener.exitObiekty(self)




    def obiekty(self):

        localctx = JailBreakLangParser.ObiektyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_obiekty)
        self._la = 0 # Token type
        try:
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.match(JailBreakLangParser.T__5)
                self.state = 49
                self.match(JailBreakLangParser.T__1)
                self.state = 50
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 240518168576) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 51
                self.match(JailBreakLangParser.T__2)
                self.state = 52
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 240518168576) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.match(JailBreakLangParser.T__6)
                self.state = 54
                self.match(JailBreakLangParser.T__1)
                self.state = 55
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 240518168576) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 56
                self.match(JailBreakLangParser.T__2)
                self.state = 57
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 240518168576) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 58
                self.match(JailBreakLangParser.T__7)
                self.state = 59
                self.match(JailBreakLangParser.T__1)
                self.state = 60
                _la = self._input.LA(1)
                if not(_la==35 or _la==37):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 61
                self.match(JailBreakLangParser.T__2)
                self.state = 62
                _la = self._input.LA(1)
                if not(_la==35 or _la==37):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 4)
                self.state = 63
                self.match(JailBreakLangParser.T__8)
                self.state = 64
                self.match(JailBreakLangParser.T__1)
                self.state = 65
                _la = self._input.LA(1)
                if not(_la==35 or _la==37):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 66
                self.match(JailBreakLangParser.T__2)
                self.state = 67
                _la = self._input.LA(1)
                if not(_la==35 or _la==37):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 5)
                self.state = 68
                self.match(JailBreakLangParser.T__9)
                self.state = 69
                self.match(JailBreakLangParser.T__1)
                self.state = 70
                _la = self._input.LA(1)
                if not(_la==35 or _la==37):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 71
                self.match(JailBreakLangParser.T__2)
                self.state = 72
                _la = self._input.LA(1)
                if not(_la==35 or _la==37):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 73
                self.match(JailBreakLangParser.T__2)
                self.state = 74
                self.match(JailBreakLangParser.INT)
                self.state = 78
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 75
                        self.kod() 
                    self.state = 80
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                self.state = 81
                self.match(JailBreakLangParser.T__9)
                self.state = 82
                self.match(JailBreakLangParser.INT)
                self.state = 83
                self.match(JailBreakLangParser.T__10)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34375671808) != 0):
                    self.state = 84
                    self.kod_straznika()
                    self.state = 89
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 90
                self.match(JailBreakLangParser.T__11)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Instrukcje_warunkoweContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def warunek(self):
            return self.getTypedRuleContext(JailBreakLangParser.WarunekContext,0)


        def wyrazenia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JailBreakLangParser.WyrazeniaContext)
            else:
                return self.getTypedRuleContext(JailBreakLangParser.WyrazeniaContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(JailBreakLangParser.ID)
            else:
                return self.getToken(JailBreakLangParser.ID, i)

        def INT(self):
            return self.getToken(JailBreakLangParser.INT, 0)

        def getRuleIndex(self):
            return JailBreakLangParser.RULE_instrukcje_warunkowe

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstrukcje_warunkowe" ):
                listener.enterInstrukcje_warunkowe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstrukcje_warunkowe" ):
                listener.exitInstrukcje_warunkowe(self)




    def instrukcje_warunkowe(self):

        localctx = JailBreakLangParser.Instrukcje_warunkoweContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instrukcje_warunkowe)
        self._la = 0 # Token type
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.match(JailBreakLangParser.T__12)
                self.state = 94
                self.match(JailBreakLangParser.T__13)
                self.state = 95
                self.warunek(0)
                self.state = 96
                self.match(JailBreakLangParser.T__14)
                self.state = 97
                self.match(JailBreakLangParser.T__10)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34359945152) != 0):
                    self.state = 98
                    self.wyrazenia()
                    self.state = 103
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 104
                self.match(JailBreakLangParser.T__11)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(JailBreakLangParser.T__15)
                self.state = 107
                self.match(JailBreakLangParser.T__13)
                self.state = 108
                self.warunek(0)
                self.state = 109
                self.match(JailBreakLangParser.T__14)
                self.state = 110
                self.match(JailBreakLangParser.T__10)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34359945152) != 0):
                    self.state = 111
                    self.wyrazenia()
                    self.state = 116
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 117
                self.match(JailBreakLangParser.T__11)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.match(JailBreakLangParser.T__16)
                self.state = 120
                self.match(JailBreakLangParser.T__13)
                self.state = 121
                self.match(JailBreakLangParser.ID)
                self.state = 122
                self.match(JailBreakLangParser.T__17)
                self.state = 123
                self.match(JailBreakLangParser.INT)
                self.state = 124
                self.match(JailBreakLangParser.T__14)
                self.state = 125
                self.match(JailBreakLangParser.T__10)
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34359945152) != 0):
                    self.state = 126
                    self.wyrazenia()
                    self.state = 131
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 132
                self.match(JailBreakLangParser.T__11)
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 4)
                self.state = 133
                self.match(JailBreakLangParser.ID)
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14:
                    self.state = 134
                    self.match(JailBreakLangParser.T__13)
                    self.state = 135
                    self.match(JailBreakLangParser.ID)
                    self.state = 140
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==3:
                        self.state = 136
                        self.match(JailBreakLangParser.T__2)
                        self.state = 137
                        self.match(JailBreakLangParser.ID)
                        self.state = 142
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 143
                    self.match(JailBreakLangParser.T__14)
                    self.state = 148
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Deklaracja_funkcjiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(JailBreakLangParser.ID)
            else:
                return self.getToken(JailBreakLangParser.ID, i)

        def wyrazenia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JailBreakLangParser.WyrazeniaContext)
            else:
                return self.getTypedRuleContext(JailBreakLangParser.WyrazeniaContext,i)


        def getRuleIndex(self):
            return JailBreakLangParser.RULE_deklaracja_funkcji

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeklaracja_funkcji" ):
                listener.enterDeklaracja_funkcji(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeklaracja_funkcji" ):
                listener.exitDeklaracja_funkcji(self)




    def deklaracja_funkcji(self):

        localctx = JailBreakLangParser.Deklaracja_funkcjiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_deklaracja_funkcji)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(JailBreakLangParser.T__18)
            self.state = 152
            self.match(JailBreakLangParser.ID)
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 153
                self.match(JailBreakLangParser.T__13)
                self.state = 154
                self.match(JailBreakLangParser.ID)
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 155
                    self.match(JailBreakLangParser.T__2)
                    self.state = 156
                    self.match(JailBreakLangParser.ID)
                    self.state = 161
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 162
                self.match(JailBreakLangParser.T__14)
                self.state = 167
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 168
            self.match(JailBreakLangParser.T__10)
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34359945152) != 0):
                self.state = 169
                self.wyrazenia()
                self.state = 174
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 175
            self.match(JailBreakLangParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WyrazeniaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def obiekty(self):
            return self.getTypedRuleContext(JailBreakLangParser.ObiektyContext,0)


        def instrukcje_warunkowe_2(self):
            return self.getTypedRuleContext(JailBreakLangParser.Instrukcje_warunkowe_2Context,0)


        def getRuleIndex(self):
            return JailBreakLangParser.RULE_wyrazenia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWyrazenia" ):
                listener.enterWyrazenia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWyrazenia" ):
                listener.exitWyrazenia(self)




    def wyrazenia(self):

        localctx = JailBreakLangParser.WyrazeniaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_wyrazenia)
        try:
            self.state = 179
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6, 7, 8, 9, 10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.obiekty()
                pass
            elif token in [13, 16, 17, 35]:
                self.enterOuterAlt(localctx, 2)
                self.state = 178
                self.instrukcje_warunkowe_2()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Instrukcje_warunkowe_2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def warunek(self):
            return self.getTypedRuleContext(JailBreakLangParser.WarunekContext,0)


        def wyrazenia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JailBreakLangParser.WyrazeniaContext)
            else:
                return self.getTypedRuleContext(JailBreakLangParser.WyrazeniaContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(JailBreakLangParser.ID)
            else:
                return self.getToken(JailBreakLangParser.ID, i)

        def INT(self):
            return self.getToken(JailBreakLangParser.INT, 0)

        def getRuleIndex(self):
            return JailBreakLangParser.RULE_instrukcje_warunkowe_2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstrukcje_warunkowe_2" ):
                listener.enterInstrukcje_warunkowe_2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstrukcje_warunkowe_2" ):
                listener.exitInstrukcje_warunkowe_2(self)




    def instrukcje_warunkowe_2(self):

        localctx = JailBreakLangParser.Instrukcje_warunkowe_2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_instrukcje_warunkowe_2)
        self._la = 0 # Token type
        try:
            self.state = 237
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.match(JailBreakLangParser.T__12)
                self.state = 182
                self.match(JailBreakLangParser.T__13)
                self.state = 183
                self.warunek(0)
                self.state = 184
                self.match(JailBreakLangParser.T__14)
                self.state = 185
                self.match(JailBreakLangParser.T__10)
                self.state = 189
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34359945152) != 0):
                    self.state = 186
                    self.wyrazenia()
                    self.state = 191
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 192
                self.match(JailBreakLangParser.T__11)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 194
                self.match(JailBreakLangParser.T__15)
                self.state = 195
                self.match(JailBreakLangParser.T__13)
                self.state = 196
                self.warunek(0)
                self.state = 197
                self.match(JailBreakLangParser.T__14)
                self.state = 198
                self.match(JailBreakLangParser.T__10)
                self.state = 202
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34359945152) != 0):
                    self.state = 199
                    self.wyrazenia()
                    self.state = 204
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 205
                self.match(JailBreakLangParser.T__11)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 207
                self.match(JailBreakLangParser.T__16)
                self.state = 208
                self.match(JailBreakLangParser.T__13)
                self.state = 209
                self.match(JailBreakLangParser.ID)
                self.state = 210
                self.match(JailBreakLangParser.T__17)
                self.state = 211
                self.match(JailBreakLangParser.INT)
                self.state = 212
                self.match(JailBreakLangParser.T__14)
                self.state = 213
                self.match(JailBreakLangParser.T__10)
                self.state = 217
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34359945152) != 0):
                    self.state = 214
                    self.wyrazenia()
                    self.state = 219
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 220
                self.match(JailBreakLangParser.T__11)
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 4)
                self.state = 221
                self.match(JailBreakLangParser.ID)
                self.state = 234
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14:
                    self.state = 222
                    self.match(JailBreakLangParser.T__13)
                    self.state = 223
                    self.match(JailBreakLangParser.ID)
                    self.state = 228
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==3:
                        self.state = 224
                        self.match(JailBreakLangParser.T__2)
                        self.state = 225
                        self.match(JailBreakLangParser.ID)
                        self.state = 230
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 231
                    self.match(JailBreakLangParser.T__14)
                    self.state = 236
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Kod_straznikaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instrukcje_warunkowe_3(self):
            return self.getTypedRuleContext(JailBreakLangParser.Instrukcje_warunkowe_3Context,0)


        def sterowanie_straznikiem(self):
            return self.getTypedRuleContext(JailBreakLangParser.Sterowanie_straznikiemContext,0)


        def getRuleIndex(self):
            return JailBreakLangParser.RULE_kod_straznika

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKod_straznika" ):
                listener.enterKod_straznika(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKod_straznika" ):
                listener.exitKod_straznika(self)




    def kod_straznika(self):

        localctx = JailBreakLangParser.Kod_straznikaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_kod_straznika)
        try:
            self.state = 241
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13, 16, 17, 35]:
                self.enterOuterAlt(localctx, 1)
                self.state = 239
                self.instrukcje_warunkowe_3()
                pass
            elif token in [20, 21, 22, 23]:
                self.enterOuterAlt(localctx, 2)
                self.state = 240
                self.sterowanie_straznikiem()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Instrukcje_warunkowe_3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def warunek(self):
            return self.getTypedRuleContext(JailBreakLangParser.WarunekContext,0)


        def kod_straznika(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JailBreakLangParser.Kod_straznikaContext)
            else:
                return self.getTypedRuleContext(JailBreakLangParser.Kod_straznikaContext,i)

